elixir/force-app/main/default/objects/genesis__Liability__c/genesis__Liability__c.object-meta.xml
<CustomObject>
    <description>This object will store the liabilities information for individual.</description>
    <label>Liability</label>
    <nameField>
        <label>Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>