elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>genesis__Account_Number__c</fullName>
    <description>Account Number related to liability information</description>
    <label>Account Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>