elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Amount_Owing__c.field-meta.xml
<CustomField>
    <fullName>genesis__Amount_Owing__c</fullName>
    <description>Amount to be paid against liability</description>
    <label>Amount Owing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>