elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Application__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application__c</fullName>
    <description>Master-Detail relationship for liability</description>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>Liabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>