elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Comments__c.field-meta.xml
<CustomField>
    <fullName>genesis__Comments__c</fullName>
    <description>Comments to capture any additional observation by credit officer</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>