elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>genesis__Interest_Rate__c</fullName>
    <description>Interest Rate for the liability.</description>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>