elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Liability_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Liability_Type__c</fullName>
    <description>Type of liability. Values could be, Personal Loan, Student Loan, Credit Card, Notes Payable, Real Estate/Mortgage, Other Expenses, Fed and State Tax, HELOC, Utility Payments etc.</description>
    <label>Liability Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied Property</fullName>
            </value>
            <value>
                <fullName>Investment Property</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>Other Vehicle</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Other Debt</fullName>
            </value>
            <value>
                <fullName>ATO Debt</fullName>
            </value>
            <value>
                <fullName>Credit Cards [Limit]</fullName>
                <isActive>false</isActive>
                <label>Credit Cards [Limit]</label>
            </value>
            <value>
                <fullName>Fed and State Tax</fullName>
                <isActive>false</isActive>
                <label>Fed and State Tax</label>
            </value>
            <value>
                <fullName>HELOC</fullName>
                <isActive>false</isActive>
                <label>HELOC</label>
            </value>
            <value>
                <fullName>Investment Property(s)</fullName>
                <isActive>false</isActive>
                <label>Investment Property(s)</label>
            </value>
            <value>
                <fullName>Notes Payable</fullName>
                <isActive>false</isActive>
                <label>Notes Payable</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other Debts</fullName>
                <isActive>false</isActive>
                <label>Other Debts</label>
            </value>
            <value>
                <fullName>Other Expenses</fullName>
                <isActive>false</isActive>
                <label>Other Expenses</label>
            </value>
            <value>
                <fullName>Other Vehicles</fullName>
                <isActive>false</isActive>
                <label>Other Vehicles</label>
            </value>
            <value>
                <fullName>Owner Occupied</fullName>
                <isActive>false</isActive>
                <label>Owner Occupied</label>
            </value>
            <value>
                <fullName>Personal Loans</fullName>
                <isActive>false</isActive>
                <label>Personal Loans</label>
            </value>
            <value>
                <fullName>Real Estate/Mortgage</fullName>
                <isActive>false</isActive>
                <label>Real Estate/Mortgage</label>
            </value>
            <value>
                <fullName>Student Loan</fullName>
                <isActive>false</isActive>
                <label>Student Loan</label>
            </value>
            <value>
                <fullName>Utility Payments</fullName>
                <isActive>false</isActive>
                <label>Utility Payments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>