elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Original_Amount__c</fullName>
    <description>Principle amount</description>
    <inlineHelpText>Including available withdraw.</inlineHelpText>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>