elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>genesis__Payment_Frequency__c</fullName>
    <description>Frequency of payment amount</description>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>