elixir/force-app/main/default/objects/genesis__Liability__c/fields/genesis__Secured_by_Lien__c.field-meta.xml
<CustomField>
    <fullName>genesis__Secured_by_Lien__c</fullName>
    <description>Lien property information</description>
    <label>Secured by (Lien)</label>
    <length>128</length>
    <type>Text</type>
</CustomField>