elixir/force-app/main/default/objects/genesis__Liability__c/fields/Household_2__c.field-meta.xml
<CustomField>
    <fullName>Household_2__c</fullName>
    <label>Household 2 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>