elixir/force-app/main/default/objects/genesis__Liability__c/fields/Household_4__c.field-meta.xml
<CustomField>
    <fullName>Household_4__c</fullName>
    <label>Household 4 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>