elixir/force-app/main/default/objects/genesis__Liability__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>clcommon__Party__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>