elixir/force-app/main/default/objects/genesis__Liability__c/fields/To_Be_Refinanced__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Refinanced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Refinanced</label>
    <type>Checkbox</type>
</CustomField>